# MHz-Readout-Processor

./: .gitignore  README.md  pyproject.toml
src/readout_processor/: adapter.py  controller.py  readout_adapter.py  udp_core.py
web/config/: odin.cfg
